--- a/src/app/pages/cabecalho/cabecalho.component.html
+++ b/src/app/pages/cabecalho/cabecalho.component.html
@@ -1,5 +1,5 @@
 <mat-list role="list">
-  <img src="assets/logo.png">
+  <img src="../../../assets/logo.png">
   <mat-list-item role="listitem">Página inicial</mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item role="listitem">Perfil</mat-list-item>
