--- a/src/app/pages/home/cabecalho/cabecalho.component.html
+++ b/src/app/pages/home/cabecalho/cabecalho.component.html
@@ -1,7 +1,9 @@
 <mat-list role="list">
-  <img src="../../../assets/logo.png">
+  <img src="../../../../assets/logo.png">
   <mat-list-item role="listitem">Página inicial</mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item role="listitem">Perfil</mat-list-item>
+  <mat-divider></mat-divider>
+  <mat-list-item (click)="modalCriarPost()" role="listitem">Criar</mat-list-item>
   <mat-divider></mat-divider>
 </mat-list>
