montando retorno das postagens

--- a/src/app/pages/home/cabecalho/cabecalho.component.html
+++ b/src/app/pages/home/cabecalho/cabecalho.component.html
@@ -1,4 +1,4 @@
-<mat-list role="list">
+<mat-list role="list" class="50">
   <img src="../../../../assets/logo.png">
   <mat-list-item role="listitem">Página inicial</mat-list-item>
   <mat-divider></mat-divider>
