--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -1,1 +1,4 @@
-<app-cabecalho></app-cabecalho>
+<div class="row-home">
+  <app-cabecalho class="w-20"></app-cabecalho>
+  <app-linha-tempo class="w-60"></app-linha-tempo>
+</div>
