--- a/src/app/pages/home/linha-tempo/linha-tempo.component.html
+++ b/src/app/pages/home/linha-tempo/linha-tempo.component.html
@@ -1,11 +1,11 @@
 <div class="container-linha-tempo">
   <div class="publicacoes w-60">
-    <div *ngFor="let publicacao of objPublicacoes" class="publicacao">
+    <div *ngFor="let publicacao of service.objPublicacoes" class="publicacao">
       <p>
         <b>{{publicacao.usuario.nome | uppercase}}</b>
         <mat-icon color="primary">verified</mat-icon>
       </p>
-      <img class="w-100" [src]="publicacao.imagem">
+      <img class="w-100" [src]="base64Imagem + publicacao.imagem">
 
       <p><b>{{publicacao.usuario.nome | uppercase}} </b> {{publicacao.descricao}}</p>
       <div class="comentarios">
