correção de alguns bugs de validação

--- a/src/app/pages/home/cabecalho/cabecalho.component.html
+++ b/src/app/pages/home/cabecalho/cabecalho.component.html
@@ -6,4 +6,6 @@
   <mat-divider></mat-divider>
   <mat-list-item (click)="modalCriarPost()" role="listitem">Criar</mat-list-item>
   <mat-divider></mat-divider>
+  <mat-list-item (click)="deslogar()" class="sair" role="listitem">Sair</mat-list-item>
+
 </mat-list>
