--- a/src/app/pages/home/cabecalho/cabecalho.component.html
+++ b/src/app/pages/home/cabecalho/cabecalho.component.html
@@ -1,10 +1,10 @@
 <mat-list role="list" class="50">
   <img src="../../../../assets/logo.png">
-  <mat-list-item role="listitem">Página inicial</mat-list-item>
+  <mat-list-item [routerLink]="'/home'" role="listitem">Página inicial</mat-list-item>
   <mat-divider></mat-divider>
-  <mat-list-item role="listitem">Perfil</mat-list-item>
+  <mat-list-item (click)="modalCriarPost()" role="listitem">Publicar</mat-list-item>
   <mat-divider></mat-divider>
-  <mat-list-item (click)="modalCriarPost()" role="listitem">Criar</mat-list-item>
+  <mat-list-item [routerLink]="'/fotos'" role="listitem">Minhas fotos</mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item (click)="deslogar()" class="sair" role="listitem">Sair</mat-list-item>
 
