--- a/src/app/pages/home/cabecalho/cabecalho.component.html
+++ b/src/app/pages/home/cabecalho/cabecalho.component.html
@@ -4,7 +4,7 @@
   <mat-divider></mat-divider>
   <mat-list-item (click)="modalCriarPost()" role="listitem">Publicar</mat-list-item>
   <mat-divider></mat-divider>
-  <mat-list-item [routerLink]="'/fotos'" role="listitem">Minhas fotos</mat-list-item>
+  <mat-list-item [routerLink]="'/fotos'" role="listitem">Album de fotos</mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item (click)="deslogar()" class="sair" role="listitem">Sair</mat-list-item>
 
