--- a/src/app/pages/fotos/list-fotos/list-fotos.component.html
+++ b/src/app/pages/fotos/list-fotos/list-fotos.component.html
@@ -6,6 +6,7 @@
 
     <div class="imagens">
       <div class="imagem w-100" *ngFor="let imagens of service.objAlbum; index as i">
+        <p><mat-icon>verified</mat-icon>{{imagens.usuario.nome | uppercase}}</p>
         <img class="w-100" [src]="base64Image + imagens.imagem">
         <button *ngIf="usuarioServic.idUsuarioLogado == imagens.usuario.id" (click)="deletarPublicacao(imagens.id)" mat-button color="warn">deletar</button>
       </div>
